fix: prevent boxshadow from being cutoff

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-	margin: 10px 0;
+	margin: 10px;
 	font-family: 'Montserrat', sans-serif;
 	color: #555;
 }
